# beve-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  pr-complex.md
.github/workflows/: ci.yml
benches/: comparison.rs  serde_int_decode.rs  serde_with_decode.rs  serialization.rs  serialized_size.rs  streaming_bulk_decode.rs
dev/: bulk-slice-fast-path.md  serialized-size.md  unify-bulk-slice-unsafe.md
docs/: cli.md  complex-and-matrices.md  dynamic-value.md  enums.md  json-interop.md  selective-field-loading.md  streaming-serialization.md  streaming.md  typed-arrays.md  zero-copy.md
examples/: compare.rs  emit_bool.rs  emit_color.rs
scripts/: plot_compare.py
src/: aligned.rs  de.rs  error.rs  ext.rs  fast.rs  field.rs  header.rs  json.rs  lib.rs  mat.rs  raw.rs  ser.rs  serde_arrays.rs  size.rs  streaming_de.rs  streaming_ser.rs  value.rs
tests/: basic.rs  fast.rs  field.rs  int_decode_correctness.rs  interop.rs  mat_oracle.rs  mat_oracle_cpp.rs  mat_v73.rs  property.proptest-regressions  property.rs  serde_with_arrays.rs  serialized_size.rs  spec.rs  streaming.rs  streaming_bulk_slice.rs  typed_slice.rs  value.rs
tests/cpp/: glaze_bench.cpp  glaze_interop.cpp  matio_oracle.cpp
tests/data/matlab_string_fixture/: README.md
