[package]
name = "beve"
version = "0.4.3"
edition = "2021"
description = "Rust implementation of the BEVE (Binary Efficient Versatile Encoding) specification with serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/beve-org/beve-rs"
homepage = "https://github.com/beve-org/beve-rs"
readme = "README.md"

[features]
default = []
mat = ["dep:hdf5_metno", "dep:ndarray"]

[dependencies]
serde = { version = "1", features = ["derive"] }
half = { version = "2.4", features = ["serde"] }
simdutf8 = "0.1"
hdf5_metno = { package = "hdf5-metno", version = "0.12.3", optional = true }
ndarray = { version = "0.17", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.5"
proptest = "1.4"

[build-dependencies]
pkg-config = "0.3"

[[bench]]
name = "serialization"
harness = false
