[package]
name = "beve"
version = "1.0.0"
edition = "2024"
description = "Rust implementation of the BEVE (Binary Efficient Versatile Encoding) specification with serde support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/beve-org/beve-rs"
homepage = "https://github.com/beve-org/beve-rs"
readme = "README.md"

[features]
default = ["mat"]
mat = ["dep:hdf5-pure"]

[dependencies]
serde = { version = "1", features = ["derive"] }
half = { version = "2.4", features = ["serde"] }
simdutf8 = "0.1"
hdf5-pure = { version = "0.1", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = "0.5"
proptest = "1.4"
hdf5-pure = { version = "0.1" }

[[bin]]
name = "beve-cli"

[[bench]]
name = "serialization"
harness = false
